# PRISM

./: .gitignore  .gitmodules  README.md  run_PRISM.sh  setup.sh
HetPE_simulator/: CMakeLists.txt  Makefile
HetPE_simulator/src/: HUB_main.cpp  graph_analyzer.cpp  helper.cpp  helper.hpp  main.cpp  mem.cpp  mem.hpp  preprocess.cpp
cacti/: cache.cfg  run.sh
cacti/obj_dbg/: cacti
cacti_backup/: 128kb_cache.cfg  16kb_cache.cfg  256kb_cache.cfg  32kb_cache.cfg
